--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,24 +6,24 @@ header:
       en-US   : *EN
       en-CA   : *EN
       en-AU   : *EN
-      zh-Hans : &ZH_HANS  归档
+      zh-Hans : &ZH_HANS  入门
       zh      : *ZH_HANS
       zh-CN   : *ZH_HANS
       zh-SG   : *ZH_HANS
-      zh-Hant : &ZH_HANT  歸檔
+      zh-Hant : &ZH_HANT  入門
       zh-TW   : *ZH_HANT
       zh-HK   : *ZH_HANT
-      ko      : &KO       아카이브
+      ko      : &KO       시작하기
       ko-KR   : *KO
-      fr      : &FR       Archives
+      fr      : &FR       commencer
       fr-BE   : *FR
       fr-CA   : *FR
       fr-CH   : *FR
       fr-FR   : *FR
       fr-LU   : *FR
-      tr      : &TR       Arşivdekiler
+      tr      : &TR       başlarken
       # @end locale config
-    url: /archive.html
+    url: /getting-started.html
 
   - titles:
       # @start locale config
