--- a/_data/variables.yml
+++ b/_data/variables.yml
@@ -5,7 +5,7 @@ default:
   paths:
     root: /
     home: /
-    getting-started:  /getting-started.html
+    archive:  /archive.html
     rss:  /feed.xml
   mathjax: false
   mathjax_autoNumber: false
