Add remote theme

--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,8 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  tankala
 
 # Build settings
-theme: jekyll-text-theme
+# theme: jekyll-text-theme
+remote_theme: kitian616/jekyll-text-theme@master
 text_skin: default
 
 plugins:
