--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@
 ##############################
 text_skin: default # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
 highlight_theme: default # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
-url     : # the base hostname & protocol for your site e.g. https://www.someone.com
-baseurl : # does not include hostname
+url     : /
+baseurl : /
 title   : learn-pip-trends
 description: > # this means to ignore newlines until "Language & timezone"
   Learn everything about Python
@@ -27,30 +27,24 @@ description: > # this means to ignore newlines until "Language & timezone"
 
 ## => Language and Timezone
 ##############################
-lang: # the language of your site, default as "en"
-timezone: # see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones for the available values
+lang: en
+timezone: 
 
 
 ## => Author and Social
 ##############################
 author:
-  type      : # "person" (default), "organization"
-  name      : Your Name
-  url       :
+  type      : person
+  name      : Ashok Tankala
+  url       : https://ashok.tanka.la/
   avatar    : # path or url of avatar image (square)
   bio       : I am an amazing person.
-  email     :
-  facebook  : # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
-  twitter   : # "user_name" the last part of your profile url, e.g. https://twitter.com/user_name
-  weibo     : # "user_id"   the last part of your profile url, e.g. https://www.weibo.com/user_id/profile?...
-  googleplus: # "user_id"   the last part of your profile url, e.g. https://plus.google.com/u/0/user_id
-  telegram  : # "user_name" the last part of your profile url, e.g. https://t.me/user_name
-  medium    : # "user_name" the last part of your profile url, e.g. https://medium.com/user_name
-  zhihu     : # "user_name" the last part of your profile url, e.g. https://www.zhihu.com/people/user_name
-  douban    : # "user_name" the last part of your profile url, e.g. https://www.douban.com/people/user_name
-  linkedin  : # "user_name" the last part of your profile url, e.g. https://www.linkedin.com/in/user_name
-  github    : # "user_name" the last part of your profile url, e.g. https://github.com/user_name
-  npm       : # "user_name" the last part of your profile url, e.g. https://www.npmjs.com/~user_name
+  email     : ashok.tankala@gmail.com
+  blog      : https://blog.tanka.la/
+  youtube   : https://youtube.com/c/TankalaTelugu
+  twitter   : https://twitter.com/ashok_tankala
+  linkedin  : https://www.linkedin.com/in/ashoktankala/
+  github    : https://github.com/tankala
 
 
 ## => GitHub Repository (if the site is hosted by GitHub)
@@ -78,7 +72,7 @@ license: CC-BY-NC-4.0 # "CC-BY-4.0", "CC-BY-SA-4.0", "CC-BY-NC-4.0", "CC-BY-ND-4
 
 ## TOC
 toc:
-  selectors: # "h1,h2,h3" (default)
+  selectors: "h1,h2,h3,h4" 
 
 
 ## => Markdown Enhancements
@@ -118,16 +112,9 @@ sharing:
 ## => Comments
 ##############################
 comments:
-  comments:
-  provider: gitalk
-  gitalk:
-    clientID    : "d5a0e57662b5ac4bfb10"
-    clientSecret: "47419dca062b9ff6841d71046b53177bf4bbba1e"
-    repository  : "learn-pip-trends"
-    owner       : "tankala"
-    admin: # Github repo owner and collaborators, only these guys can initialize github issues, IT IS A LIST.
-      - "tankala"
-      - "ayushjain01"
+  provider: disqus
+  disqus:
+    shortname: "your-disqus-shortname"
 
 
 ## => Pageview
