--- a/_config.yml
+++ b/_config.yml
@@ -182,6 +182,7 @@ defaults:
       type: posts
     values:
       layout: article
+      image: /assets/images/general/general-cover.png
       sharing: true
       license: true
       aside:
