--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,7 @@ url     : /
 baseurl : /
 title   : learn-pip-trends
 tagline : Learn everything about Python
-description: > 
-  Learn everything about Python
+description: Learn everything about Python
 author : Ashok Tankala
 twitter:
   username: piptrends
