--- a/_config.yml
+++ b/_config.yml
@@ -143,7 +143,7 @@ analytics:
 
   ## Google Analytics
   google:
-    tracking_id : ${{ secrets.GOOGLE_ANALYTICS_ID }}
+    tracking_id : "G-714KN8K9WW"
     anonymize_ip: true
 
 
