highcharts core article added

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -7,3 +7,8 @@ ayush:
   picture: # replace with avatar later
   name: Ayush Jain
   twitter: AyushGanna
+
+Lavanya:
+  picture: # replace with avatar later
+  name: Lavanya Mylapalli
+  twitter: #
