changes on text

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,7 +8,7 @@ ayush:
   name: Ayush Jain
   twitter: AyushGanna
 
-Lavanya:
+lavanya:
   picture: # replace with avatar later
   name: Lavanya Mylapalli
   twitter: #
