--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 text_skin: default 
 highlight_theme: default 
 url     : "https://learn.piptrends.com/"
-baseurl : ""
+baseurl : /
 title   : learn-pip-trends
 tagline : Learn everything about Python
 description: Learn everything about Python
