--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 ##############################
 text_skin: default 
 highlight_theme: default 
-url     : /
-baseurl : ""
+url     : https://learn.piptrends.com
+baseurl : /
 title   : learn-pip-trends
 tagline : Learn everything about Python
 description: Learn everything about Python
