Add gem manually to docketfile

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -7,7 +7,7 @@ ENV LANGUAGE en_US.UTF-8
 
 # throw errors if Gemfile has been modified since Gemfile.lock
 RUN bundle config --global frozen 1
-
+RUN gem install jekyll-url-metadata
 WORKDIR /usr/src/app
 
 COPY Gemfile Gemfile.lock jekyll-text-theme.gemspec ./
