--- a/_config.yml
+++ b/_config.yml
@@ -161,6 +161,7 @@ permalink   : date
 exclude:
   - CHANGELOG.md
   - HOW_TO_RELEASE.md
+  - Gemfile
   - Gemfile.lock
   - LICENSE
   - README-*.md
