--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,7 +74,7 @@ extra_css:
 copyright: Copyright &copy learn-pip-trends 2024
 
 extra:
-  homepage: getting-started/  # Will replace once homepage is ready
+  homepage: /  # Will replace once homepage is ready
   custom_data:
     - key: value
   tags:
